Three State With Selected Index

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <div>Three State</div>
     <input type="checkbox" class="jtoggler" data-jtmulti-state>
     <input type="checkbox" class="jtoggler" disabled data-jtmulti-state>
+    <div>Three State With Selected Index 2</div>
+    <input type="checkbox" class="jtoggler" data-jtmulti-state data-jtmulti-index='2'>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="https://sinneren.github.io/jToggler/jtoggler.js"></script>
+        <script src="https://essanousy.github.io/jToggler/jtoggler.js"></script>
     <script>
         $(document).ready(() => {
             $('.jtoggler').jtoggler();
